<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:gravity="center_horizontal">

	<ImageView android:id="@+id/placeImage" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_centerHorizontal="true" />

	<TextView android:id="@+id/placeName" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_centerHorizontal="true"
		android:text="" android:layout_below="@id/placeImage"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:textStyle="bold" android:capitalize="words" />

	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:gravity="center_horizontal|bottom">

		<ImageView android:id="@+id/logo" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_centerHorizontal="true"
			android:src="@drawable/icon" />

		<ToggleButton android:id="@+id/buttonNear"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:textOn="@string/toggle_button_near_on" android:textOff="@string/toggle_button_near_off"
			android:layout_centerHorizontal="true" android:layout_below="@id/logo"
			android:layout_toLeftOf="@id/logo" />

		<ToggleButton android:id="@+id/buttonTweet"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:textOn="@string/toggle_button_tweet_on" android:textOff="@string/toggle_button_tweet_off"
			android:layout_centerHorizontal="true" android:layout_below="@id/logo"
			android:layout_toRightOf="@id/logo" />

		<Button android:id="@+id/buttonRandom" android:text="@string/button_random"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:gravity="center" android:layout_below="@id/buttonTweet"
			android:paddingTop="15dip" />
	</RelativeLayout>
</RelativeLayout>
